Add install page

--- a/camera-5050.html
+++ b/camera-5050.html
@@ -46,6 +46,6 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-bonus-seal.mp4"/>
 		</video>
-		<p>More difficult camera setup that leaves an additional ground seal for higher reward on hit or additional pressure on block. Can also end in 3U6U > j.M for to fuzzy.</p>
+		<p>More difficult camera setup that leaves an additional ground seal for higher reward on hit or additional pressure on block. Can also end in 3U6U > j.M for fuzzy.</p>
 	</body>
 </html>
