--- a/corner-fuzzy.html
+++ b/corner-fuzzy.html
@@ -55,7 +55,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/66h-fuzzy.mp4"/>
 		</video>
-		<p>Similar to the first couple of fuzzy setups listed. You can end it either with the 5L whiff or the 5U > j.6U whiff ender, but the timing for the former is much more strict. Does more damage and looks way cooler, but leaves you with a worse tornado cooldown.</p>
+		<p>You can end it either with the 5L whiff or the 5U > j.6U whiff ender, but the timing for the former is much more strict. Does more damage and looks way cooler, but leaves you with a worse tornado cooldown.</p>
 		<h2>Cooler 66H Fuzzy</h2>
 		<code>autocombo > 623H > j.H > rejump j.H > j.214H > 5H > 236H~8 > 66H > 22U</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
