--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<a href="https://grimnir-combos.github.io/antiairs.html">Antiairs</a><br/>
 		<a href="https://grimnir-combos.github.io/u-skill-starters.html">U Skill Starters</a><br/>
 		<a href="https://grimnir-combos.github.io/super-combos.html">Super and Cashout Combos</a><br/>
+		<a href="https://grimnir-combos.github.io/install.html">Install Tech</a><br/>
 		<p>Grimnir tech resource. Links to combos/setups above. Below is an overview of the game's combo system and a brief introduction to Grimnir's fuzzy setups.</p>
 		<p>Granblue combo basics: Granblue's "combo limit" system only kicks in after the opponent is launched, so as long as the opponent is grounded you can do as many hits as you can fit in without it affecting the launcher portion of the combo. As a result you'll usually see combos start with (starter) because, well, it actually doesn't matter. Some common (starter)s:</p>
 		<ul>
