--- a/tornado-setups.html
+++ b/tornado-setups.html
@@ -14,7 +14,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront.mp4"/>
 		</video>
-		<p>Sets up a tornado in front of the opponent. Frame data is approximately even but there's a big tornado in front of the opponent so they can't really do much. Autospaces the tornado so that if you run up and throw as early as possible the opponent will get picked up by the tornado for a full combo. Can also run up button, run up and throw bait with the top seal, or just wait for the opponent to do something dumb. How good this setup is is fiercely matchup-dependent; in some matchups, any non-reversal button the opponent presses will get clipped by the tornado, effectively trapping them. But in some matchups, something like sweep can reach Grimnir and nearly nullify it entirely (notably, the mirror). Unlike fuzzy and camera setups, you have to bait the opponent's reversal option, but because you aren't hitting a button into your opponent's wakeup it's generally much stronger against parry characters. Note that tornado-infront setups DO NOT work on Vaseraga and Ladiva - they are too large, so the tornado covers them on wakeup instead.</p>
+		<p>Sets up a tornado in front of the opponent. Frame data is approximately even but there's a big tornado in front of the opponent so they can't really do much. Autospaces the tornado so that if you run up and throw as early as possible the opponent will get picked up by the tornado for a full combo. Can also run up button, run up and throw bait with the top seal, or just wait for the opponent to do something dumb. How good this setup is is fiercely matchup-dependent; in some matchups, any non-reversal button the opponent presses will get clipped by the tornado, effectively trapping them. But in some matchups, something like sweep can reach Grimnir and nearly nullify it entirely (notably, the mirror). Unlike fuzzy and camera setups, you have to bait the opponent's reversal option, but because you aren't hitting a button into your opponent's wakeup it's generally much stronger against parry characters. Note that tornado-infront setups DO NOT work on Vaseraga and Ladiva - they are too wide, so the tornado covers them on wakeup instead.</p>
 		<h2>Tornado In Front (j.22U)</h2>
 		<code>(starter) > 214H > 2M > 623H > j.22U > rejump j.L > j.1U > 5M (> 236H~8 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -26,12 +26,12 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-behind-new.mp4"/>
 		</video>
-		<p>Sets up a tornado behind the opponent. Largely powercrept by the tornado-infront setups because throw loses to mash, but can have value in some matchups where the above setups don't work as well (such as Vaseraga/Ladiva). The distance isn't super exact, but if you want to convert off throw you do need to let the tornado go a little bit far - stopping it too soon leaves you too plus to combo out of throw.</p>
+		<p>Sets up a tornado behind the opponent. Largely powercrept by the tornado-infront setups because throw loses to mash, but can have value in some matchups where the above setups don't work as well (such as Vaseraga/Ladiva). The distance isn't super exact, but if you want to convert off throw you do need to either delay the tornado or let it go a little bit far - stopping it too soon leaves you too plus to combo out of throw.</p>
 		<h2>Old Tornado Behind</h2>
 		<code>(starter) > 214H > 5LL > 623H > j.22H > j.6U > j.L > 214U (> 236H~8 whiff, set up behind the opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-behind.mp4"/>
 		</video>
-		<p>Similar to the previous setup, but it leaves the opponent closer so a potential throw is both easier to connect and less telegraphed. Does a bit less damage and, believe it or not, it's also significantly more difficult.</p>
+		<p>Similar to the previous setup, but it leaves the opponent closer so a potential throw is both easier to connect and less telegraphed, but in exchange, you lose your shimmy option. Does a bit less damage and, believe it or not, it's also significantly more difficult.</p>
 	</body>
 </html>
