Fix broken install video links

--- a/install.html
+++ b/install.html
@@ -37,23 +37,23 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-setup.mp4"/>
 		</video>
-		<p>Alternate install setup which doesn't require your seal cooldown but gives a weaker fuzzy position. Can be notably useful when you don't have the 100 meter until the end of the combo. Remember that j.M can be rolled, so you need to be ready to react to more options.</p>
+		<p>Alternate (easier) install setup which doesn't require your seal cooldown but costs juice directly and gives a weaker fuzzy position. Can be notably useful when you don't have the 100 meter until the end of the combo. Remember that j.M can be rolled, so you need to be ready to react to more options.</p>
 		<h2>Install Midscreen</h2>
 		<code>(starter) > 623L > 6U > 2M > 236H > dash forward > 214H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-midscreen.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-corner-to-corner-fuzzy.mp4"/>
 		</video>
 		<p>The only midscreen install combo you need to know. Takes you corner-to-corner with only two dashes, AND it's a fuzzy setup. Need to delay the 623H dynamically based on distance to corner. Don't do more 6U > autocombo repetitions than you need to reach the corner - if you do too many, you'll get pushed out of range of autocombo and drop. Also, if you're too close to the corner, 236H will only hit twice and the combo will drop. At closer ranges, you can just do the standard meterless fuzzy that starts with 214H.</p>
 		<h2>Install Corner Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy.mp4"/>
 		</video>
 		<p>Literally just the meterless fuzzy combo from the other page. If you were hoping for an install-specific route you might be disappointed, but this combo is great, and you shouldn't be spending your install juice any more than strictly necessary.</p>
 		<h2>Install Tornado In Front</h2>
 		<code>(starter) > 214H > 2M > 623M > j.2U > rejump j.L > j.1U > 5H > 236H~4</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-tornado.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-tornado-in-front.mp4"/>
 		</video>
 		<p>Install-exclusive tornado-in-front setup. Spends two install juice. Leaves you slightly minus, but not punishable. The minus frames don't really mean anything here compared to the j.214U setup honestly - either the opponent has a button they can press, or they don't. The 3 frames of difference will never matter. Basically, it's an identical setup, with all the pros and cons.</p>
 		<h1>Install Bonus</h1>
@@ -67,7 +67,7 @@
 		<h2>Install Midscreen Overhead</h2>
 		<code>(starter) > 623M > j.3U > 5H > 623M > j.3U (whiff) > crossup 2M > 623M > j.3U > 2H > 236H~8 (whiff) > 66M</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-midscreen-overhead.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-midscreen-reset-overhead.mp4"/>
 		</video>
 		<p>Difficult install-exclusive midscreen overhead reset. All inputs need to be performed about as early as possible. Even if you hit the combo, the resulting conversion is extremely difficult to pick up. The one time I hit this combo in a match I got DPed out of it and cried.</p>
 		<h2>Install Corner Steal</h2>
@@ -79,7 +79,7 @@
 		<h2>Install-Exclusive Fuzzy Route</h2>
 		<code>(starter) > 214H > 2M > 623H > 5M > 236H > 5HHH (> 9U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-corner-fuzzy-bad.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-corner-fuzzy.mp4"/>
 		</video>
 		<p>You were probably expecting something cooler. Spends one install juice for the combo, and a bonus charge if you want to go high. Unlike the other fuzzy, this one is plus on BC dodge. That said, it's not a very good use of your install charges, and it isn't particularly cool, so don't expect to get much use out of it.</p>
 		<h2>Install j.M Loop Fuzzy</h2>
