Minor install page fixes

--- a/install.html
+++ b/install.html
@@ -64,18 +64,6 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-loop.mp4"/>
 		</video>
 		<p>Comedy loop you can perform on tall and semi-tall characters. Can do this on block too for a very long chain of fuzzy mix, though a savvy opponent can grab you out of it (why??).</p>
-		<h2>Install Midscreen Overhead</h2>
-		<code>(starter) > 623M > j.3U > 5H > 623M > j.3U (whiff) > crossup 2M > 623M > j.3U > 2H > 236H~8 (whiff) > 66M</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-midscreen-reset-overhead.mp4"/>
-		</video>
-		<p>Difficult install-exclusive midscreen overhead reset. All inputs need to be performed about as early as possible. Even if you hit the combo, the resulting conversion is extremely difficult to pick up. The one time I hit this combo in a match I got DPed out of it and cried.</p>
-		<h2>Install Corner Steal</h2>
-		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623M > j.1U > f.L (> 6U whiff)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-corner-steal.mp4"/>
-		</video>
-		<p>Refreshingly easy compared to the last couple of combos. Steals the corner in an attempt to catch your opponent not holding the block button. You would be shocked how often it gets blocked.</p>
 		<h2>Install-Exclusive Fuzzy Route</h2>
 		<code>(starter) > 214H > 2M > 623H > 5M > 236H > 5HHH (> 9U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -94,11 +82,23 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-midscreen-spin-loop-fuzzy.mp4"/>
 		</video>
 		<p>Another install-exclusive midscreen fuzzy. This one only spends THREE juice for the setup, and does slightly more damage! Again, zero merit. You could have just taken them to the corner instead. But isn't having zero merit kind of a merit in itself?</p>
-		<h2>Install Crossup</h2>
+		<h2>Install Corner Steal</h2>
+		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623M > j.1U > f.L (> 6U whiff)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-corner-steal.mp4"/>
+		</video>
+		<p>Refreshingly easy compared to the last couple of combos. Steals the corner in an attempt to catch your opponent not holding the block button. You would be shocked how often it gets blocked.</p>
+		<h2>Install Midscreen Crossup</h2>
 		<code>(starter) > 623M > j.3U > 2H > 236H~4 > 5M (> 6U whiff)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-crossup.mp4"/>
 		</video>
 		<p>Spends two juice for a very reactable midscreen crossup. Your opponent is probably holding the guard button anyway. You could have just taken them to the corner instead.</p>
+		<h2>Install Midscreen Overhead Reset</h2>
+		<code>(starter) > 623M > j.3U > 5H > 623M > j.3U (whiff) > crossup 2M > 623M > j.3U > 2H > 236H~8 (whiff) > 66M</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-midscreen-reset-overhead.mp4"/>
+		</video>
+		<p>Difficult install-exclusive midscreen overhead reset. All inputs need to be performed about as early as possible. Even if you hit the combo, the resulting conversion is extremely difficult to pick up. The one time I hit this combo in a match I got DPed out of it and cried.</p>
 	</body>
 </html>
