--- a/corner-fuzzy.html
+++ b/corner-fuzzy.html
@@ -73,7 +73,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy-alt.mp4"/>
 		</video>
-		<p>Requires an air seal already set and you need to be close to the opponent. Does a bit more damage than the other meterless fuzzy and looks much cooler.</p>
+		<p>Requires an air seal already set and you need to be close to the opponent. Does a bit more damage than the other meterless fuzzy. Doing j.2U instead of j.1U makes the combo more consistent for literally no downside, but it doesn't look as cool.</p>
 		<h2>Alternate Metered Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~8 > 623H > j.22U (> 2L whiff > superjump > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
