Add more 214U starter combos now that they're actually match-viable

--- a/u-skill-starters.html
+++ b/u-skill-starters.html
@@ -27,5 +27,17 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/236u.mp4"/>
 		</video>
 		<p>Zoner's nightmare. You can combo out of 236U (ult tornado) if you're far enough away, or almost anywhere if your opponent gets hit jumping. You have a lot of options, based mostly around how much meter you're willing to spend. The combo listed here is the one you want to do if you can kill. If you can't kill, you might opt to conserve meter by doing 236U > 214U > 2H > 623H, or if you're close enough to the corner you can go into fuzzy with 236U > 214U > 22U > 5H > 9U > j.M (> j.9U6U whiff > j.H fuzzy).</p>
+		<h2>214U starter (no corner, no meter)</h2>
+		<code>214U > (delay)5M > 236H~4 > run forward > 5HH > 623H > 22H or 22L</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-conservative.mp4"/>
+		</video>
+		<p>Alternate version of the no corner 214U combo if you don't have or don't want to spend the extra meter for the second kick. Was extremely difficult last patch, but the 2.00 changes have made it pretty consistent.</p>
+		<h2>214U starter midscreen fuzzy</h2>
+		<code>214U > (delay)5M > 236H~4 > run forward > 22U > 5H > 623L (> j.9U whiff > j.H fuzzy)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-midscreen-fuzzy.mp4"/>
+		</video>
+		<p>Very difficult midscreen fuzzy. The j.H is manually timed.</p>
 	</body>
 </html>
