Add DP punish combo

--- a/camera-5050.html
+++ b/camera-5050.html
@@ -9,6 +9,7 @@
 	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Camera 50/50</h1>
+		<p>Note that all camera 50/50 setups now cost the full 50 meter as of patch 2.00 - you no longer get the 25% refund for linking j.22U in the air like this.</p>
 		<h2>Camera High</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.26U whiff > j.L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -46,6 +47,6 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-bonus-seal.mp4"/>
 		</video>
-		<p>More difficult camera setup that leaves an additional ground seal for higher reward on hit or additional pressure on block. Can also end in 3U6U > j.M for fuzzy.</p>
+		<p>More difficult camera setup that leaves an additional ground seal for higher reward on hit or additional pressure on block. Can also end in 3U6U > j.M for fuzzy. If you start with 100 meter, you can build back the 50% on hit to end the resulting combo in super, a privilege the old camera combo no longer gets on patch 2.00.</p>
 	</body>
 </html>
