--- a/install.html
+++ b/install.html
@@ -69,7 +69,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-corner-fuzzy.mp4"/>
 		</video>
-		<p>You were probably expecting something cooler. Spends one install juice for the combo, and a bonus charge if you want to go high. Unlike the other fuzzy, this one is plus on BC dodge. That said, it's not a very good use of your install charges, and it isn't particularly cool, so don't expect to get much use out of it.</p>
+		<p>You were probably expecting something cooler. Spends one install juice for the combo, and a bonus charge if you want to go high. Not a very good use of your install charges and not particularly swaggy, so don't expect to get much use out of it.</p>
 		<h2>Install j.M Loop Fuzzy</h2>
 		<code>(starter) > j.M > j.6U > j.M > rejump j.M > j.6U > j.M > 5H (> 9U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
