--- a/midscreen.html
+++ b/midscreen.html
@@ -80,6 +80,6 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/623M-reach-corner.mp4"/>
 		</video>
-		<p>A similar concept with 623M. Gives better corner carry than the 623L route and keeps your tornado cooldown, so if you're choosing between this combo and the 623L one, you'll generally prefer this one. If you know you won't reach corner with 214H, you can go straight into 214U from the j.3U for better corner carry.</p>
+		<p>A similar concept with 623M. More damage than the 623L route and keeps your tornado cooldown, so if you're choosing between this combo and the 623L one, you'll generally prefer this one. If you know you won't reach corner with 214H, you can go straight into 214U from the j.3U for better corner carry.</p>
 	</body>
 </html>
