--- a/super-combos.html
+++ b/super-combos.html
@@ -33,5 +33,11 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-big-dick-cashout.mp4"/>
 		</video>
 		<p>Spends all meter and 2 BP for excellent damage anywhere on screen.</p>
+		<h2>DP Punish</h2>
+		<code>5H (counter) > microdash > 22U > 5HHH > 6U > 5HH > 6U > 5HHH > 236H > 66L > 2M > raging strike > raging chain > 5H > 214H > 5H > 623H > 5H > raging strike > raging chain > 5H > raging strike > raging chain</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/dppunish.mp4"/>
+		</video>
+		<p>Simple easy pleasant consistent match-viable full resource DP punish. If you hit this round one, the mental damage will instantly win you the set.</p>
 	</body>
 </html>
