--- a/tornado-setups.html
+++ b/tornado-setups.html
@@ -20,7 +20,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront-minus.mp4"/>
 		</video>
-		<p>Worse version of the previous tornado setup that you can fall back on if your 22H is on cooldown. Leaves you significantly minus, but the tornado blocks many characters from punishing. If someone tries this on you in the mirror, you can punish them with sweep.</p>
+		<p>Worse version of the previous tornado setup that you can fall back on if your 22H is on cooldown. Leaves you significantly minus, but the tornado blocks many characters from punishing. If someone tries this on you in the mirror, you can punish them with sweep. As of the 2.00 patch, this setup now costs the full 50 meter (no refund).</p>
 		<h2>Tornado Behind</h2>
 		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > 22U (> 236H~8 whiff, set up behind the opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
