--- a/u-skill-starters.html
+++ b/u-skill-starters.html
@@ -38,6 +38,6 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-midscreen-fuzzy.mp4"/>
 		</video>
-		<p>Very difficult midscreen fuzzy. The j.H is manually timed.</p>
+		<p>Slightly difficult midscreen fuzzy. The j.H is manually timed.</p>
 	</body>
 </html>
