--- a/corner-fuzzy.html
+++ b/corner-fuzzy.html
@@ -20,27 +20,27 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-fuzzy-easy.mp4"/>
 		</video>
-		<p>The first fuzzy combo you should learn: Grimnir's basic corner combo, but ending in 22U. It's a good setup with no major flaws. Some minor flaws: it uses one seal to time the j.H. You'll see this in a lot of setups, because airdash > j.H has a much more lenient timing than jump > j.H. Also if you want to bait brave counter and dodge, you're -1. And of course it requires 50 meter (but with the refund only costs 25). That said it's pretty rare not to have the meter at the end of this combo, it's very easy, very consistent, and ends you with 2 ground seals.</p>
+		<p>The first fuzzy combo you should learn: Grimnir's basic corner combo, but ending in 22U. It's a good setup with no major flaws. A minor flaw: it uses one seal to time the j.H. You'll see this in a lot of setups, because airdash > j.H has a much more lenient timing than jump > j.H. And of course it requires 50 meter (but with the refund only costs 25). That said it's pretty rare not to have the meter at the end of this combo, it's very easy, very consistent, and ends you with 2 ground seals.</p>
 		<p>Sidenote, all fuzzy combos (including this one) safejump unless stated otherwise.</p>
 		<h2>Improved Metered Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > land > rejump j.22U (> land > 5L whiff > jump > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-fuzzy-alt.mp4"/>
 		</video>
-		<p>This combo is also easy and consistent, though a couple parts take a little practice. The 5L > 5H link might be weird at first, but it's also a really good frametrap on block so it's worth learning even if you don't like this combo. If you really hate it you can replace it with 5LL for a medium-sized damage hit. The other weird part is the rejump j.22U. Hopefully you're okay with using the skill button because the technical input for it is probably impractical. The advantages of this combo over the previous one: you keep an additional air seal, and if you bait brave counter and dodge you're now +1 instead of -1 and can keep your turn with 5L.</p>
+		<p>This combo is also easy and consistent, though a couple parts take a little practice. The 5L > 5H link might be weird at first, but it's also a really good frametrap on block so it's worth learning even if you don't like this combo. If you really hate it you can replace it with 5LL for a medium-sized damage hit. The other weird part is the rejump j.22U. Hopefully you're okay with using the skill button because the technical input for it is probably impractical. The main advantage of this combo over the previous one is the additional air seal.</p>
 		<h2>Meterless Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy.mp4"/>
 		</video>
-		<p>Pretty similar to the previous combo. Its big advantage is that it doesn't cost you 25 meter. Its big disadvantage is that it puts your seals on cooldown for 12 seconds, so when your opponent brave counters you, you now have to play with no seals. It also does a little less damage (naturally, because you aren't spending meter). And like the first setup, you're -1 if you bait the brave counter with dodge. That said this is a good combo if you want to conserve your meter. Just don't be too stingy - meter gain in this game is super fast.</p>
+		<p>Pretty similar to the previous combo. Its big advantage is that it doesn't cost you 25 meter. Its big disadvantage is that it puts your seals on cooldown for 12 seconds, so when your opponent brave counters you, you now have to play with no seals. It also does a little less damage (naturally, because you aren't spending meter). That said this is a good combo if you want to conserve your meter. Just don't be too stingy - meter gain in this game is super fast.</p>
 		<h2>Sealless Fuzzy</h2>
 		<code>(fuzzy) > j.22U > j.3U > 5H > 214H > 5H > 623H > 22U > 5H > raging strike > raging chain</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/sealless-fuzzy.mp4"/>
 		</video>
 		<p>You can fuzzy tall characters in the corner even if you don't have any seals up because they're big enough for the j.22U hitbox to launch them. Low damage, but high surprise factor. If you do rising j.L for the fuzzy hit instead of rising j.M it works on a few bonus semi-tall characters. Combo listed spends all your resources for high damage (and leads into a fuzzy setup if they live), but you can end it however you're feeling that day if you want to conserve.</p>
-		<p>Tall characters (can rising j.M > j.22U): Grimnir, Katalina, Percival, Metera, Vaseraga, Soriz, Eustace, Beelzebub, Belial, A.Belial, Versusia, Ladiva, Lowain, Lucilius</p>
+		<p>Tall characters (can rising j.M > j.22U): Grimnir, Katalina, Percival, Metera, Vaseraga, Soriz, Eustace, Beelzebub, Belial, A.Belial, Versusia, Ladiva, Lowain, Lucilius, Sandalphon</p>
 		<p>Semi-tall characters (can rising j.L > j.22U): Zooey, Yuel, Siegfried, 2B</p>
 		<h1>Bonus Fuzzy Setups</h1>
 		<p>These setups are either more difficult or less useful than the above setups. They still have their uses, especially if your execution is good, but you should learn them after.</p>
@@ -49,7 +49,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-hard.mp4"/>
 		</video>
-		<p>This was the popular fuzzy route on the release version of the game. Leaves you with only one ground seal, and on current patch the j.H is manually timed (you must press about as late as possible), but it does more damage than the other meterless setup, has a little more room for ambiguity/shenanigans, and leaves you plus on brave counter dodge.</p>
+		<p>This was the popular fuzzy route on the release version of the game. Leaves you with only one ground seal, and on current patch the j.H is manually timed (you must press about as late as possible), but it does more damage than the other meterless setup and has a little more room for ambiguity/shenanigans (e.g. you're less likely to get fuzzy mashed out of your empty jump throw).</p>
 		<h2>66H Fuzzy</h2>
 		<code>(starter) > 214H > 5L > 623H > 5H > 236H~8 > 66H > 22U</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -68,17 +68,11 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/corner-grounded-tornado.mp4"/>
 		</video>
 		<p>You need to be close to the opponent. Does even more damage than either of the previous combos. If you have seals set up somewhere other than the corner the 5U will ruin the combo, so sub out the ender for whatever you feel confident in making up on the spot.</p>
-		<h2>Alternate Meterless Fuzzy</h2>
+		<h2>Air Seal Fuzzy</h2>
 		<code>(starter) > 623M > j.1U > 5H > 236H~8 > 66H > 623H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy-alt.mp4"/>
 		</video>
-		<p>Requires an air seal already set and you need to be close to the opponent. Does a bit more damage than the other meterless fuzzy. Doing j.2U instead of j.1U makes the combo more consistent for literally no downside, but it doesn't look as cool.</p>
-		<h2>Alternate Metered Fuzzy</h2>
-		<code>(starter) > 214H > 5L > 5H > 236H~8 > 623H > j.22U (> 2L whiff > superjump > j.H fuzzy)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-fuzzy-hard.mp4"/>
-		</video>
-		<p>Difficult metered fuzzy that leaves a bit of room to play with timing, e.g. you can delay jump instead of 2L whiff to go for empty jump low or grab.</p>
+		<p>Requires an air seal already set and you need to be close to the opponent. Does a bit more damage than the other meterless fuzzy. Doing j.2U instead of j.1U makes the combo more consistent for literally no downside, but it doesn't look as cool. Can also do the rejump j.22U > 5L whiff ender for a little more damage and an extra air seal.</p>
 	</body>
 </html>
