Perform small corrections

--- a/midscreen.html
+++ b/midscreen.html
@@ -76,7 +76,7 @@
 		</video>
 		<p>If you don't think you'll reach the corner with 214H, you can do this instead to push your opponent Quite Close to the corner and set up seals.</p>
 		<h2>623M</h2>
-		<code>(starter) > 623M > j.3U > (delay)214H > 5H > 623H > 22U</code><br class="combo"/>
+		<code>(starter) > 623M > j.3U > (delay)5H > 214H > 5H > 623H > 22U</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/623M-reach-corner.mp4"/>
 		</video>
