Add warning about fuzzies being removed

--- a/recommended.html
+++ b/recommended.html
@@ -43,7 +43,7 @@
 		</video>
 		<p>On the other hand this setup is *easier* than it looks: when you press U for the j.99U, hold the U button for the entire rest of the setup up to the j.L/2L. High safejumps, low loses to DP. Theoretically reactable, but this isn't common knowledge and it's a very difficult reaction so the absurd majority of the ranked playerbase treats it as a pure 50/50. Note that contrary to the slightly outdated video, on patch 2.00 the 22U now costs the full 50% meter (no refund).</p>
 		<h2>Tornado In Front (j.214U)</h2>
-		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > rejump j.214U (> 236H~8 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > rejump forward j.214U (> 236H~8 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront.mp4"/>
 		</video>
