--- a/tornado-setups.html
+++ b/tornado-setups.html
@@ -10,7 +10,7 @@
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
 		<h1>Tornado Setups</h1>
 		<h2>Tornado In Front (j.214U)</h2>
-		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > rejump j.214U (> 236H~8 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > rejump forward j.214U (> 236H~8 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-infront.mp4"/>
 		</video>
