--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	</head>
 	<body>
 		<h1>Grimnir Combos</h1>
+		<p>Fuzzies as a concept have been removed from the game as of patch 2.10. Anything mentioning the fuzzy is outdated. It will take a bit to update the page. For now, think of all (formerly) fuzzy setups as safejump setups instead.</p>
+		<p>Tornado setups, camera setups, U skill combos, and super combos are all fully intact.</p>
 		<a href="https://grimnir-combos.github.io/recommended.html">RECOMMENDED COMBOS FOR NEW GRIM PLAYERS</a><br/>
 		<a href="https://grimnir-combos.github.io/corner-fuzzy.html">Corner Fuzzies</a><br/>
 		<a href="https://grimnir-combos.github.io/camera-5050.html">Camera 50/50</a><br/>
